adding boxes of things

--- a/display-exercise.html
+++ b/display-exercise.html
@@ -17,6 +17,16 @@
 </head>
 <body>
 <!-- your HTML here to implement the colored box design -->
-	<p>Placeholder!</p>
+<div class="full">
+<div class="centered">
+	<div class="green half"></div>
+  <div class="blue half"></div>
+</div>
+<div class="centered">
+  <div class="grey third"></div>
+  <div class="black third"></div>
+  <div class="yellow third"></div>
+</div>
+</div>
 </body>
 </html>
