--- a/position-exercise.html
+++ b/position-exercise.html
@@ -17,7 +17,7 @@
   <link rel="stylesheet" type="text/css" href="styles/position-page.css">
 </head>
 <body>
-  <!-- To finish the design, the HTML for the nav requires no additional elements, just the right CSS -->
+  <img src="images/outerspace_landscape.jpeg" id="bg" alt="">
   <nav>
     <img src="images/icon.png">
     <ul>
@@ -28,7 +28,10 @@
   </nav>
 
   <main>
-    <!-- Put the HTML you need to accomplish the design -->
+    <div class="green-box">
+      <img src="images/spacecat.png" class="cat">
+      <img src="images/spacedog.png" class="dog">
+    </div>
   </main>
 </body>
 </html>
